--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^5.0.5
   http: ^1.1.0
   webview_flutter: ^3.0.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
