--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cmake.sourceDirectory": "C:/Users/harsh/Desktop/SIH/pragati_v1/linux"
+  "cmake.sourceDirectory": "C:/Users/harsh/Desktop/SIH/pragati_v1/linux",
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
