--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   http: ^1.1.0
   webview_flutter: ^3.0.0
   fl_chart: ^0.40.0
+  provider: ^6.1.1
+  animated_text_kit: ^4.2.2
+  animated_splash_screen: ^1.3.0
+  flutter_launcher_icons: ^0.9.0
+  firebase_auth: ^4.15.2
+  firebase_core: ^2.24.2
+  google_sign_in: ^6.1.5
+  flutter_signin_button: ^2.0.0
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
