--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^6.1.5
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.0.7
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
